# stackfuck

./: pyproject.toml  stackfuck.py
