[tool.poetry]
name = "stackfuck"
version = "1.0"
description = "A stack-based language inspired by brainfuck, built in Python"
authors = ["DaCuteRaccoon"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
